# matrix-compatibility

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  aa.md  config.yml  default.config.yml  default.env
.github/workflows/: rust.yml
src/: config.rs  env_manager.rs  gitlab_api.rs  gitlab_ci.rs  main.rs  semver_utils.rs  table_builder.rs  utility.rs  versions.rs
