[package]
name = "matrix-compatility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
markdown-table = "0.1.0"
dotenv = "0.15.0"
version-compare = "0.1"